test para los cambios efectuados